fix: #2264 UI improvement in test search result table (#2290)